@@ -1,3 +1,7 @@
+2007-08-03  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/PersonCard.cs: added methods to authorize a user
+
 2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/PersonCard.cs: Updated personcard to have a little more
